force-app/main/default/objects/Indeed_com_job_form__c/Indeed_com_job_form__c.object-meta.xml
<CustomObject>
    <label>Indeed.com job form</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Indeed.com job form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indeed.com job forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>