force-app/main/default/objects/Indeed_com_job_form__c/fields/About_previous_job__c.field-meta.xml
<CustomField>
    <fullName>About_previous_job__c</fullName>
    <label>About previous job</label>
    <type>TextArea</type>
</CustomField>