force-app/main/default/objects/Indeed_com_job_form__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>