force-app/main/default/objects/Indeed_com_job_form__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This field is created as per the insructions of client harry.</description>
    <inlineHelpText>Dear user, please enter the first name of the candidate.</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>