force-app/main/default/objects/Indeed_com_job_form__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Enter your last name</inlineHelpText>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>