force-app/main/default/objects/Indeed_com_job_form__c/fields/Link_To_Partner_Website__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Partner_Website__c</fullName>
    <formula>IF
(  ISPICKVAL( Preferred_Country__c ,&apos;USA&apos;),

 HYPERLINK(&quot;http://www.salesforce.com&quot;, &quot;Click here for USA partner website&quot;),

 HYPERLINK(&quot;http://www.intelogik.com&quot;, &quot;Click here for Non-USA partner website&quot;))</formula>
    <inlineHelpText>Dear user, please click here for partner website</inlineHelpText>
    <label>Link To Partner Website</label>
    <type>Text</type>
</CustomField>