force-app/main/default/objects/Indeed_com_job_form__c/fields/Outlook_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Name__c</fullName>
    <formula>IF(ISPICKVAL( Gender__c , &apos;M&apos;), &apos;Mr.&apos;, &apos;Ms.&apos;) &amp;

Last_Name__c &amp; &quot;, &quot; &amp;  First_Name__c</formula>
    <label>Outlook Name</label>
    <type>Text</type>
</CustomField>