force-app/main/default/objects/Indeed_com_job_form__c/fields/Passport_Alert__c.field-meta.xml
<CustomField>
    <fullName>Passport_Alert__c</fullName>
    <formula>IF( 
Passport_Submission_Date__c  &lt;  TODAY(),

&apos;Sorry, the passport submission date has passed!&apos;,

TEXT( Passport_Submission_Date__c  -  TODAY() )  &amp; &apos;days left only for passport submission!&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Alert</label>
    <type>Text</type>
</CustomField>