force-app/main/default/objects/Indeed_com_job_form__c/fields/Passport_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Submission_Date__c</fullName>
    <label>Passport Submission Date</label>
    <type>Date</type>
</CustomField>