force-app/main/default/objects/Indeed_com_job_form__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <label>Placement Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>