force-app/main/default/objects/Indeed_com_job_form__c/fields/Preferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Country__c</fullName>
    <inlineHelpText>Select your country</inlineHelpText>
    <label>Preferred Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Aus</fullName>
                <isActive>false</isActive>
                <label>Aus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>