force-app/main/default/objects/Indeed_com_job_form__c/fields/Salary_Expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expected__c</fullName>
    <label>Salary Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>