force-app/main/default/objects/Indeed_com_job_form__c/fields/Simple_Interest__c.field-meta.xml
<CustomField>
    <fullName>Simple_Interest__c</fullName>
    <formula>Principal_Amount__c  *  Tenure__c  *  ROI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simple Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>