force-app/main/default/objects/Indeed_com_job_form__c/listViews/indeed_com_queue_Indeed_com_job_form.listView-meta.xml
<ListView>
    <fullName>indeed_com_queue_Indeed_com_job_form</fullName>
    <filterScope>Queue</filterScope>
    <label>indeed.com queue</label>
    <queue>indeed_com_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>